2007-11-05  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/basedlg.cxx: forgot to remove one printf statement.
	
2007-11-05  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/basedlg.hxx:
	* source/ui/basedlg.cxx:
	* source/ui/dialog.cxx: use the position and size of the parent dialog
	to compute an initial position of a dialog.

2007-11-04  Kohei Yoshida  <kyoshida@novell.com>

	* source/ui/resmgr.cxx: set the current locale only after all string
	data are loaded, instead of setting it every time string value is
	queried.

2007-11-04  Kohei Yoshida  <kyoshida@novell.com>

	* source/inc/basedlg.hxx:
	* source/ui/basedlg.cxx: added setFocus() method to manually set focus 
	to the dialog, but this doesn't seem to work and no idea why.  also 
	added support to retain the dialog position when the dialog gets turned
	off and on.
	
	* source/ui/dialog.cxx: tried to set focus on the constraint dialog 
	after range selection is done.  But it still sets focus on the main
	solver dialog.

2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* workben/addon_pkg/translation/en-US/license.txt:
	* workben/addon_pkg/license.txt: moved from the top location to the
	bottom.

	* source/inc/tool/global.hxx: turned off SCSOLVER_DEBUG flag.
	
	* source/numeric/lpsolve.cxx:
	* source/ui/dialog.cxx:
	* source/ui/solvemodel.cxx:
	* source/ui/xcalc.cxx: surrounded debug statements with 
	'#if SCSOLVER_DEBUG' to make it conditional.
	
	* workben/addon_pkg/description.xml: removed license files from non-
	en-US locales.
	
	* workben/addon_pkg/Makefile.in: package the new license.txt file.

	* workben/addon_pkg/translation/de/license.txt:
	* workben/addon_pkg/translation/en-GB/license.txt:
	* workben/addon_pkg/translation/es/license.txt:
	* workben/addon_pkg/translation/fr/license.txt: removed.

2007-10-31  Kohei Yoshida  <kyoshida@novell.com>

	* source/numeric/matrix.cxx: enable dynamic resize by default to prevent
	crash during LP solving.
	