@@ -1,5 +1,15 @@
 2007-11-05  Kohei Yoshida  <kyoshida@novell.com>
 
+	* source/inc/dialog.hxx:
+	* source/service/service.cxx:
+	* source/ui/basedlg.cxx:
+	* source/ui/dialog.cxx:
+	* source/ui/solvemodel.cxx: center the message dialog across the main 
+	dialog & make it a temporary instance instead of storing it with the 
+	main dialog instance.
+
+2007-11-05  Kohei Yoshida  <kyoshida@novell.com>
+
 	* source/ui/basedlg.cxx: forgot to remove one printf statement.
 	
 2007-11-05  Kohei Yoshida  <kyoshida@novell.com>
